--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aurora Aerial Systems provides cutting-edge drone solutions for industries worldwide. Explore our services and products today.">
-    <meta name="keywords" content="drones, aerial systems, drone services, drone technology, aerial photography, surveying, inspections">
-    <title>Aurora Aerial Systems - Innovative Drone Solutions</title>
+    <meta name="description" content="Aurora Aerial Systems offers cutting-edge drone solutions for industries in India, specializing in agriculture, infrastructure, and more.">
+    <meta name="keywords" content="drones, aerial systems, drone services, drone technology, aerial photography, surveying, inspections, India">
+    <title>Aurora Aerial Systems - Revolutionizing Drone Solutions in India</title>
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Google Font: Poppins (for a modern Indian touch) -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="index.css">
@@ -18,47 +21,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
-<body>
+<body style="font-family: 'Poppins', sans-serif;">
 
     <!-- Header Section -->
-
-
-
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background: linear-gradient(45deg, #69247C, #DA498D);">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background: linear-gradient(45deg, #FF9A8B, #FFCC00);">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="logo.png" alt="Aurora Aerial Systems" height="50">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#hero" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#about" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#services" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#products" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#contact" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">Contact</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="#">
+                <img src="logo.png" alt="Aurora Aerial Systems" height="50">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#hero" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#products" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact" style="color: #F9E6CF; font-weight: 600; text-transform: uppercase;">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
       
     <!-- Hero Section -->
     <section id="hero" class="d-flex justify-content-center align-items-center text-center text-white" data-aos="fade-in" style="background: url('hero-bg.jpg') no-repeat center center/cover; height: 100vh;">
         <div class="container">
-            <h1 class="display-4 fw-bold">Empowering Industries with Cutting-Edge Drone Technology</h1>
-            <p class="lead">Explore the future of aerial systems for a variety of industries.</p>
+            <h1 class="display-4 fw-bold">Empowering Indian Industries with Cutting-Edge Drone Technology</h1>
+            <p class="lead">Explore the future of aerial systems for agriculture, construction, and more.</p>
             <a href="#about" class="btn btn-primary btn-lg">Learn More</a>
         </div>
     </section>
@@ -67,7 +67,7 @@
     <section id="about" class="py-5 bg-white" data-aos="fade-up">
         <div class="container text-center">
             <h2 class="display-5 fw-bold mb-4">Who We Are</h2>
-            <p class="lead">Aurora Aerial Systems is a leader in the design, development, and deployment of unmanned aerial systems. We provide cutting-edge drone solutions for industries worldwide.</p>
+            <p class="lead">Aurora Aerial Systems is a leader in the design, development, and deployment of unmanned aerial systems in India. We provide innovative drone solutions for various industries.</p>
         </div>
     </section>
 
@@ -80,7 +80,7 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">Aerial Photography & Videography</h5>
-                            <p class="card-text">Capture stunning aerial footage for media, real estate, and marketing purposes.</p>
+                            <p class="card-text">Capture stunning aerial footage for real estate, media, and marketing purposes.</p>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">Surveillance & Security</h5>
-                            <p class="card-text">Enhance security through real-time aerial monitoring.</p>
+                            <p class="card-text">Enhance security with real-time aerial surveillance.</p>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">Surveying & Mapping</h5>
-                            <p class="card-text">High-precision drone surveying and mapping for construction, agriculture, and more.</p>
+                            <p class="card-text">Precision drone surveying and mapping for construction, agriculture, and more.</p>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">Inspection Services</h5>
-                            <p class="card-text">Inspect hard-to-reach areas with our advanced drone technology.</p>
+                            <p class="card-text">Inspect hard-to-reach areas using our advanced drone technology.</p>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">Model X1</h5>
-                            <p class="card-text">Compact and versatile drone for photographers.</p>
+                            <p class="card-text">Compact drone for aerial photography and media.</p>
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">Model X2</h5>
-                            <p class="card-text">Thermal imaging capabilities for inspections.</p>
+                            <p class="card-text">Drone with thermal imaging for inspections and monitoring.</p>
                         </div>
                     </div>
                 </div>
@@ -138,56 +138,12 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">Model X3</h5>
-                            <p class="card-text">Industrial-grade drone for surveying large areas.</p>
+                            <p class="card-text">Heavy-duty drone for industrial-grade surveying.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <a href="#browse" class="btn btn-primary btn-lg mt-4">Browse Our Products</a>
-        </div>
-    </section>
-
-    <!-- Testimonials Section -->
-    <section id="testimonials" class="py-5 bg-light" data-aos="fade-up">
-        <div class="container text-center">
-            <h2 class="display-5 fw-bold mb-4">What Our Clients Say</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <blockquote class="blockquote">
-                        <p>"Aurora Aerial Systems transformed our surveying process with their advanced drones. Highly recommended!"</p>
-                        <footer class="blockquote-footer">Client Name</footer>
-                    </blockquote>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="py-5 bg-white" data-aos="fade-up">
-        <div class="container text-center">
-            <h2 class="display-5 fw-bold mb-4">Get in Touch</h2>
-            <form class="row g-3 justify-content-center">
-                <div class="col-md-6">
-                    <input type="text" class="form-control" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6">
-                    <input type="email" class="form-control" placeholder="Your Email" required>
-                </div>
-                <div class="col-md-6">
-                    <select class="form-select" required>
-                        <option value="">Type of Inquiry</option>
-                        <option value="general">General</option>
-                        <option value="sales">Sales</option>
-                        <option value="support">Support</option>
-                    </select>
-                </div>
-                <div class="col-md-6">
-                    <textarea class="form-control" placeholder="Your Message" rows="4" required></textarea>
-                </div>
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary btn-lg w-100">Submit</button>
-                </div>
-            </form>
         </div>
     </section>
 
